<resources>
    <string name="app_name">FileManagerSphere</string>
    <string name="auto">auto</string>
    <string name="_lang_tag">en</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="file_list_action_sort_by_name">Name</string>
    <string name="file_list_action_sort_by_type">Type</string>
    <string name="file_list_action_sort_by_size">Size</string>
    <string name="file_list_action_sort_by_last_modified">Last Modified</string>
    <string name="file_list_action_sort_order_ascending">Ascending</string>
    <string name="file_list_action_sort_directories_first">Directories first</string>
    <string name="file_list_action_sort_path_specific">This folder only</string>
    <plurals name="file_list_action_toggle_grid">
        <item quantity="one">Toggle list view</item>
        <item quantity="other">Toggle grid view</item>
    </plurals>
    <string name="refresh">Refresh</string>
    <string name="select_all">Select all</string>
    <string name="file_list_action_navigate_to">Go to</string>
    <string name="file_list_action_show_hidden_files">Show hidden files</string>
    <string name="share">Share</string>
    <string name="file_list_action_copy_path">Copy path</string>
    <string name="fab_menu_action_create_file">Create file</string>
    <string name="fab_menu_action_create_folder">Create folder</string>
    <string name="file_item_action_archive">Compress</string>
    <string name="file_item_action_extract">Extract</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="extract">Extract</string>
    <string name="file_item_action_open_with">Open with</string>
    <string name="file_item_action_properties">Properties</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_new_folder">New folder</string>
    <string name="dialog_new_file">New file</string>
    <string name="dialog_name_file">File name</string>
    <string name="dialog_name_folder">Folder name</string>
    <string name="dialog_file_exists">A file with this name already exists</string>
    <string name="_24_de_mar">24 de mar.</string>
    <string name="_16_kb">16 KB</string>
    <string name="todo">TODO</string>
    <string name="testeeeeeeeee">TESTEEEEEEEEE</string>
    <string name="file_list_select_action_archive">Compress</string>
    <string name="recente">Recent</string>
    <string name="storage">Storage</string>
    <string name="used_space">Used Space</string>
    <string name="free_space">Free Space</string>
    <string name="gb">GB</string>
    <string name="gb_total">128</string>
    <string name="internal_st">Internal storage</string>
    <string name="policy_and_terms"><![CDATA[Privacy Policy and Terms & Conditions]]></string>
    <string name="ok">Ok</string>
    <string name="allow">Allow</string>
    <string name="download">Download</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_required_body">To provide a better user experience, we need to access the files stored on your device. This permission is necessary for the application to load and display images, videos, documents, and other relevant files. Additionally, it is essential to enable features such as file sharing, offline data storage, and document manipulation. We assure you that your data will be handled securely and with privacy in mind. To grant the permission, click "Allow" below.</string>
    <string name="action_bottom_select">Select</string>
    <string name="action_mode_title">selected</string>
    <string name="images">Images</string>
    <string name="video">Video</string>
    <string name="document">Document</string>
    <string name="music">Music</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="themes_title">Theme</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="category_aparencia">Appearance</string>
    <string name="restriction_folder">Restricted Folder</string>
    <string name="e_restriction_folder">The contents of this folder cannot be displayed due to Android restrictions.</string>
    <plurals name="renamingItems">
        <item quantity="one">Renaming %d item</item>
        <item quantity="other">Renaming %d items</item>
    </plurals>
    <plurals name="movingItems">
        <item quantity="one">Moving %d item</item>
        <item quantity="other">Moving %d items: Moving "%s" to "%s"</item>
    </plurals>
    <string name="exit_confirmation">Exit Confirmation</string>
    <string name="file_modified_are_you_sure">The file has been modified. Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="search_option_match_case">Match case</string>
    <string name="search_option_regex">Regular expression</string>
    <string name="search_option_whole_word">Whole word</string>
    <plurals name="search_results">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>
    <string name="search">Search</string>
    <string name="java">Java</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="wrap">Wrap</string>
    <string name="replacement_text">Replacement</string>
    <string name="code_editor">Code Editor</string>
    <string name="save_file_error">Error saving file</string>
    <plurals name="an_error_message_occurred">
        <item quantity="one">An error occurred while saving the file "%s"</item>
        <item quantity="other">%d errors occurred while saving the file "%s"</item>
    </plurals>
    <string name="reply_title">Default reply action</string>
    <plurals name="plurals_file_already_exists">
        <item quantity="one">Replace file</item>
        <item quantity="other">The file "\"%s\"" already exists in the destination folder. Do you want to replace it?</item>
    </plurals>
    <string name="replace">Replace</string>
    <string name="skip">Skip</string>
    <string name="empty">empty</string>
    <string name="loading">loading</string>
    <string name="error">Error</string>
    <string name="error_occurred">Error</string>
    <string name="warning">Warning</string>
    <string name="error_occurred_during_operation">An error occurred during the operation</string>
    <plurals name="operation_moving_files">
        <item quantity="one">Moving "\"%2$s\""</item>
        <item quantity="other">Moving %1$d items</item>
    </plurals>
    <plurals name="operation_copying_files">
        <item quantity="one">Copying "\"%2$s\""</item>
        <item quantity="other">Copying %1$d items</item>
    </plurals>
    <plurals name="operation_extracting_files">
        <item quantity="one">Extracting "\"%2$s\""</item>
        <item quantity="other">Extracting %1$d items</item>
    </plurals>
    <plurals name="operation_generic_files">
        <item quantity="one">Operating "\"%2$s\""</item>
        <item quantity="other">Operating %1$d items</item>
    </plurals>
    <string name="file_list_subtitle_separator">, </string>
    <plurals name="file_list_subtitle_directory_count_format">
        <item quantity="one">%1$,d folder</item>
        <item quantity="other">%1$,d folders</item>
    </plurals>
    <plurals name="file_list_subtitle_file_count_format">
        <item quantity="one">%1$,d file</item>
        <item quantity="other">%1$,d files</item>
    </plurals>
    <plurals name="file_list_selected_count_format">
        <item quantity="one">%1$,d selected</item>
        <item quantity="other">%1$,d selected</item>
    </plurals>
    <plurals name="file_list_delete_count_format">
        <item quantity="one">Delete "\"%2$s\""?</item>
        <item quantity="other">Delete %1$d items?</item>
    </plurals>
    <plurals name="files_files_renaming_count_format">
        <item quantity="one">Renaming "\"%s\""</item>
        <item quantity="other">Renaming %1$d items</item>
    </plurals>
    <plurals name="files_files_renaming_msg_count_format">
        <item quantity="other">Renaming "\"%2s\"" to "\"%3s\""</item>
    </plurals>
    <string name="set">Set</string>
    <string name="free_space_format">%s GB</string>
    <string name="total_space_format">%s GB</string>
    <string name="used_space_format">%s GB</string>
    <string name="space_of_format">Free space: %1$s GB of %2$s GB</string>
    <string name="pref_key_view_file_information">view_file_information</string>
    <string name="pref_key_file_list_margins">file_list_margins</string>
    <string name="pref_key_transparent_list_background">transparent_list_background</string>
    <string name="pref_key_material_design_3">material_design_3</string>
    <string name="pref_key_selected_file_background_opacity">selected_file_background_opacity</string>
    <string name="pref_key_show_fast_scroll">show_fast_scroll</string>
    <string name="pref_key_corner_family">corner_family</string>
    <string name="pref_behavior_default_folder_title">Default folder</string>
    <string name="pref_behavior_select_file_long_click">Select file on long click</string>
    <string name="pref_anim_in_file_list">Animation in file list</string>
    <string name="pref_rounded_corners">Rounded corners</string>
    <string name="pref_dynamic_colors">Material you</string>
    <string name="pref_behavior_set_default_folder_title">Default folder</string>
    <string name="pref_view_file_information_title">View file information</string>
    <string name="pref_title_file_list_margins">Margins of the files in the list</string>
    <string name="pref_title_transparent_list_background">Background of files in transparent list</string>
    <string name="pref_title_selected_file_background_opacity">Background color opacity when file is selected</string>
    <string name="pref_title_material_design_3">Material Design 3</string>
    <string name="pref_title_show_fast_scroll">Show fast scrolling in file list</string>
    <string name="pref_title_corner_family">Corner Family</string>
    <string name="pref_summary_anim_in_file_list">Add smooth animations to the file list for a visually pleasing experience.</string>
    <string name="pref_summary_rounded_corners">Add rounded corners to interface elements for a smoother and modern look.</string>
    <string name="pref_summary_transparent_list_background">Set the background of files in the list to be transparent.</string>
    <string name="radio_zip">.zip</string>
    <string name="radio_tar_xz">.tar.xz</string>
    <string name="radio_7z">.7z</string>
    <string name="format_file">File format</string>
    <string name="category_name">Category name</string>
    <string name="category_path">Category path</string>
    <string name="category_add">Add category</string>
    <string name="about">About</string>
    <string name="info_app_desc">"Intuitive and efficient Android file manager. Simplify your file organization"</string>
    <string name="mn_version">Version</string>
    <string name="mn_code">Source Code</string>
    <string name="mn_licenses">Licenses</string>
    <string name="mn_author">Developed by Juan Nascimento</string>
</resources>