<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:ignore="AlwaysShowAction">

    <item android:id="@+id/action_sort" android:icon="@drawable/sort_icon_control_normal_24dp"
          android:orderInCategory="100" android:title="@string/sort" app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_sort_by_name" android:title="@string/file_list_action_sort_by_name"/>
                <item android:id="@+id/action_sort_by_type" android:title="@string/file_list_action_sort_by_type"/>
                <item android:id="@+id/action_sort_by_size" android:title="@string/file_list_action_sort_by_size"/>
                <item android:id="@+id/action_sort_by_last_modified"
                      android:title="@string/file_list_action_sort_by_last_modified"/>
            </group>
            <item android:id="@+id/action_sort_order_ascending"
                  android:checkable="true"
                  android:title="@string/file_list_action_sort_order_ascending"/>
            <item android:id="@+id/action_sort_directories_first"
                  android:checkable="true"
                  android:title="@string/file_list_action_sort_directories_first"/>
            <item android:id="@+id/action_sort_path_specific"
                  android:title="@string/file_list_action_sort_path_specific"/>
            <item android:id="@+id/action_toggle_grid"
                  android:title="@string/set"/>
        </menu>
    </item>
    <item android:id="@+id/action_refresh" android:orderInCategory="100" android:title="@string/refresh"
          app:showAsAction="never"/>
    <item android:id="@+id/action_select_all" android:orderInCategory="100" android:title="@string/select_all"
          app:showAsAction="never"/>
    <item android:id="@+id/action_navigate_to" android:orderInCategory="100"
          android:title="@string/file_list_action_navigate_to" app:showAsAction="never"/>
    <item android:id="@+id/action_show_hidden_files" android:orderInCategory="100"
          android:title="@string/file_list_action_show_hidden_files" android:checkable="true" app:showAsAction="never"/>
    <item android:id="@+id/action_share" android:orderInCategory="100" android:title="@string/share"
          app:showAsAction="never"/>
    <item android:id="@+id/action_copy_path" android:orderInCategory="100"
          android:title="@string/file_list_action_copy_path" app:showAsAction="never"/>
</menu>