<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/sync_header">



        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title"/>

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/category_aparencia">

        <ListPreference
                app:key="themes"
                app:title="@string/themes_title"
                app:entries="@array/themes_entries"
                app:entryValues="@array/themes_values"
                app:defaultValue="FOLLOW_SYSTEM"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>