<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:id="@+id/eInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eInputEditText"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
                android:id="@+id/typeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

        <RadioButton
                android:id="@+id/zipRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_zip"
                />

        <RadioButton
                android:id="@+id/tarXzRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_tar_xz"

        />
        <RadioButton
                android:id="@+id/sevenZRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_7z"
        />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>