<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="5dp"
                  android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                  android:text="@string/fab_menu_action_create_file"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:id="@+id/eInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eInputEditText"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuType"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:hint="@string/format_file">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:labelFor="@+id/menuType"
                    app:simpleItems="@array/menu_type_items"
                  />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/file_list_select_action_archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCompress"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>